/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.10.2/userguide/java_library_plugin.html
 */

plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
    id 'application'
    id 'maven-publish'
}

mainClassName = 'org.scaffoldeditor.nbt.test.NBTTester'
version = '0.3.0'
group = 'org.scaffoldeditor'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

dependencies {

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'

    //implementation 'com.github.mryurihi:tbnbt:0.1.3'
    // api name: "tbnbt-0.1.4"

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
    compile 'com.github.Querz:NBT:6.1'

}

test {
	useJUnit()
	testLogging {
		showStandardStreams = true
	}
}

java {
    withJavadocJar()
    withSourcesJar()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = 'scaffold-nbt'
            version = version
            from components.java
            pom {
                name = 'Scaffold NBT'
                description = 'A library allowing you to read from and write to Minecraft worlds.'
                url = 'http://scaffoldeditor.org'
            }
        }
    }
    

    repositories {
        // maven {
        //     credentials {
        //         username = "$usr"
        //         password = "$pwd"
        //     }
        // }
        mavenLocal()
    }
}

// In this section you declare where to find the dependencies of your project
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    mavenCentral()
    maven { url 'https://jitpack.io/' }
}
